Update pipelines, secrets and membership page headers to be consistent with the rest of secondary level pages. Fixes https://github.com/openshift/origin-web-console/issues/779 Fixes https://github.com/openshift/origin-web-console/issues/780

--- a/app/styles/_substructure.less
+++ b/app/styles/_substructure.less
@@ -80,7 +80,7 @@ html,body {
     }
   }
 }
-.header-light {
+.header-toolbar {
   background-color: @panel-light;
   border-bottom: 1px solid @page-header-border-color;
 }
